--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,7 +19,7 @@ jobs:
           repository: dudleycarr/nsq
           ref: fix-docker-build
       - run: |
-          mkdir -p /commits-cache
+          mkdir -p commits-cache
       # Get the last most recent repo commit
       - name: Get latest commit to main branch
         id: latest-commit
@@ -29,7 +29,7 @@ jobs:
         id: cache
         with:
           lookup-only: true
-          path: /commits-cache
+          path: commits-cache
           key: ${{ steps.latest-commit.outputs.COMMIT_SHA }}.txt
       - id: release-id
         run: |
@@ -130,9 +130,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          mkdir -p /commits-cache
-          touch /commits-cache/${{ needs.git-activity.outputs.latest-commit }}.txt
+          mkdir -p commits-cache
+          touch commits-cache/${{ needs.git-activity.outputs.latest-commit }}.txt
       - uses: actions/cache/save@v3
         with:
-          path: /commits-cache
+          path: commits-cache
           key: ${{ needs.git-activity.outputs.latest-commit }}.txt
