--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,9 @@ jobs:
         go-version: ['1.20', '1.21']
         arch: [arm64, amd64]
         os: [linux, darwin, freebsd, windows]
+        exclude:
+          - os: windows
+            arch: arm64
     env:
       RELEASE_ID: "${{ inputs.release }}"
       PLATFORM: "go${{ matrix.go-version}}-${{ matrix.os }}-${{ matrix.arch }}"
