fix: var misspelling and string literals in expressions

--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -5,8 +5,8 @@ permissions:
   contents: write
   packages: write
 env:
-  NSQ_REPOSITORY: ${{ vars.REPOSITORY != "" && vars.RESPOSITORY || "nsqio/nsq" }}
-  NSQ_BRANCH: ${{ vars.NSQ_BRANCH != "" && vars.BRANCH || "master" }}
+  NSQ_REPOSITORY: ${{ vars.REPOSITORY != '' && vars.REPOSITORY || 'nsqio/nsq' }}
+  NSQ_BRANCH: ${{ vars.NSQ_BRANCH != '' && vars.BRANCH || 'master' }}
 jobs:
   nightly-meta:
     outputs:
