--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
           key: ${{ inputs.ref }}.txt
 
   build-binaries:
-    if: ${{ needs.status.outputs.built }} == 'false'
+    if: needs.status.outputs.built == 'false'
     needs: [status]
     runs-on: ubuntu-latest
     strategy:
@@ -81,7 +81,7 @@ jobs:
           path: ${{ env.RELEASE_ID }}/nsq-*.tar.gz
 
   docker:
-    if: ${{ needs.status.outputs.built }} == 'false'
+    if: needs.status.outputs.built == 'false'
     needs: [status]
     runs-on: ubuntu-latest
     env:
